# distributedhardware_distributed_camera

./: .gitignore  CMakeLists.txt  CMakeLists_simple.txt  COMPLETION_REPORT.md  diagnose_dll_logs.cpp  diagnose_dll_logs_v2.cpp  rebuild_sink.bat  rebuild_sink.ps1  rebuild_sink_with_compiler.bat  rebuild_source.bat
.claude/: claude.json
.claude/skills/: distributed-camera.md
common/include/: dh_log_callback.h  distributed_hardware_log.h  original_code_log_verifier.h
common/src/: dh_log_callback.cpp
fault_injection/: BUILD.gn
fault_injection/include/: dcamera_fault_injection.h
fault_injection/src/: dcamera_fault_injection.cpp
log_analyzer/: loganalyzer.cpp  loganalyzer.h
mock/: AVCODEC_MOCK_USAGE.md  AVCODEC_QUICK_REFERENCE.md  BUILD.gn  BUILD_AND_TEST.md  CAMERA_MOCK_README.md  CMakeLists.txt  QUICK_START.md  README_HDI_MOCK.md  README_SURFACE.md  SOFTBUS_MOCK_IMPLEMENTATION.md  SOFTBUS_MOCK_QUICKSTART.md  SOFTBUS_MOCK_README.md  SURFACE_IMPLEMENTATION.md
mock/include/: avcodec_mock.h  data_buffer.h  distributed_hardware_log.h  hdi_mock.h  mock_camera_framework.h  mock_hdf_device_manager.h  mock_implementation.h  mock_manager.h  mock_module_manager.h  mock_platform_factory.h  surface_mock.h
mock/src/: avcodec_mock.cpp  mock_hdf_device_manager.cpp  mock_module_manager.cpp  mock_platform_interfaces.cpp  mock_video_source.cpp  softbus_mock.cpp  surface_mock.cpp
mock/test/: avcodec_test.cpp  camera_mock_test.cpp  softbus_mock_test.cpp
platform/: BUILD.gn
platform/include/: ffmpeg_codec.h  platform_compatibility_adapter.h  platform_interface.h  socket_communication_adapter.h
platform/src/: data_buffer.cpp  ffmpeg_codec.cpp  platform_example.cpp  platform_factory.cpp  socket_communication_adapter.cpp
protocol/: BUILD.gn
protocol/include/: dcamera_protocol_sniffer.h
protocol/src/: dcamera_protocol_sniffer.cpp
scripts/: build_and_test.bat  check_env.bat  download_tools.bat  setup_env.bat
services/: BUILD.gn  CMakeLists.txt
services/channel/: BUILD.gn
services/channel/src/: local_tcp_adapter.cpp
services/channel/test/tcp_adapter/: BUILD.gn  README.md
services/channel/test/tcp_adapter/src/: communication_adapter_factory.cpp  dcamera_tcp_adapter.cpp
services/include/: distributed_camera_service.h  distributed_camera_sink_impl.h
services/src/: distributed_camera_service_factory.cpp  distributed_camera_sink_impl.cpp
services/test/: services_test.cpp
services/thread_isolation/: BUILD.gn  source_sink_manager.gn
services/thread_isolation/include/: dcamera_source_sink_manager.h  dcamera_thread_isolation.h
services/thread_isolation/src/: dcamera_source_sink_manager.cpp  dcamera_thread_isolation.cpp
services/virtual_bus/: BUILD.gn
services/virtual_bus/include/: dcamera_virtual_bus.h
services/virtual_bus/src/: dcamera_virtual_bus.cpp
sink_module/: CMakeLists.txt
sink_module/include/: distributed_camera_sink.h
sink_module/src/: ffmpeg_dynamic_loader.cpp  ffmpeg_dynamic_loader.h  ffmpeg_encoder_wrapper.cpp  ffmpeg_encoder_wrapper.h  sink_service_impl.cpp  sink_service_impl.h  socket_sender.cpp  socket_sender.h  yuv_file_camera.cpp  yuv_file_camera.h
source_module/: CMakeLists.txt
source_module/include/: distributed_camera_source.h
source_module/src/: ffmpeg_decoder_wrapper.cpp  ffmpeg_decoder_wrapper.h  hdf_mock_driver.cpp  hdf_mock_driver.h  socket_adapter.cpp  socket_adapter.h  socket_receiver.cpp  socket_receiver.h  source_service_impl.cpp  source_service_impl.h
test/: tcp_adapter_test.cpp  verify_dhlog_usage.bat  verify_dhlog_usage.py
test/integration/end_to_end/: BUILD.gn  CMakeLists.txt  run_test.sh
test/unit/channel/include/: communication_adapter_factory.h  dcamera_tcp_adapter.h  i_communication_adapter.h  local_tcp_adapter.h
test/unit/mock/: BUILD_gn_update.txt  CMakeLists.txt  CMakeLists_dh_log.txt  FINAL_VERIFICATION_REPORT.txt  SOFTBUS_VALIDATION_SUMMARY.txt  build_and_run_camera_test.bat  camera_mock_quick_check.sh  log_capture.cpp  log_capture.h  log_capture_test.cpp  softbus_validation_test.cpp  validate_hdi_mock.py  verify_avcodec_sources.bat  verify_camera_mock.pl  verify_camera_mock.ps1
test/unit/mock/include/: call_tracker.h  camera_mock.h  distributed_hardware_log.h  mock_device_manager.h  mock_interface.h  mock_platform_interfaces.h  mock_video_source.h  softbus_mock.h
test/unit/mock/src/: camera_mock.cpp  data_buffer.cpp  hdi_mock.cpp  mock_device_manager.cpp  mock_implementation.cpp  mock_platform_factory.cpp
test/unit/mock/test/: hdi_mock_test.cpp  mock_test.cpp  softbus_mock_integration.cpp  surface_mock_test.cpp
test/unit/sink/: CMakeLists.txt  run_tests.bat  run_tests.sh
test/unit/sink/mock/: mock_camera_client_sink.cpp  mock_camera_client_sink.h  mock_sink_channel.cpp  mock_sink_channel.h
test/unit/source/: BUILD.gn  distributed_camera_source_impl.cpp  distributed_camera_source_impl.h  mock_source_components.h
windows_test_environment/: CMakeLists.txt  build_qmake.bat  build_ui_minGW.bat  update_and_run.bat  windows_test_environment.pro
windows_test_environment/src/: automation_test_engine.cpp  automation_test_engine.h  log_redirector.cpp  log_redirector.h  main.cpp  main_controller.cpp  main_controller.h  main_window.cpp  main_window.h
