# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import(
    "//foundation/distributedhardware/distributed_camera/distributedcamera.gni")

ohos_static_library("distributed_camera_mock") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
    boundary_sanitize = true
    integer_overflow = true
    ubsan = true
  }
  stack_protector_ret = true

  include_dirs = [
    "include",
    "${common_path}/include/constants",
    "${common_path}/include/utils",
    "${services_path}/cameraservice/base/include",
    "${interfaces_path}/inner_kits/native_cpp/camera_source/include",
    "${interfaces_path}/inner_kits/native_cpp/camera_sink/include",
    "//foundation/distributedhardware/distributed_camera/platform/include",
  ]

  sources = [
    "src/mock_device_manager.cpp",
    "src/mock_hdf_device_manager.cpp",
    "src/mock_camera_framework.cpp",
    "src/mock_manager.cpp",
    "src/mock_video_source.cpp",
    "src/mock_platform_interfaces.cpp",
    "src/mock_platform_factory.cpp",
    "src/hdi_mock.cpp",
    "src/camera_mock.cpp",
    "src/avcodec_mock.cpp",
  ]

  deps = [
    "${common_path}:distributed_camera_utils",
    "${services_path}/cameraservice:base",
    "${interfaces_path}/inner_kits/native_cpp:camera_source",
    "${interfaces_path}/inner_kits/native_cpp:camera_sink",
  ]

  external_deps = [
    "device_manager:devicemanagersdk",
    "hilog:libhilog",
    "ipc:ipc_core",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"dcameramock\"",
    "LOG_DOMAIN=0xD004150",
  ]

  subsystem_name = "distributedhardware"
  part_name = "distributed_camera"
}