# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import(
    "//foundation/distributedhardware/distributed_camera/distributedcamera.gni")

ohos_static_library("distributed_camera_thread_isolation") {
  include_dirs = [
    "include",
    "${common_path}/include/constants",
    "${common_path}/include/utils",
  ]

  sources = [
    "src/dcamera_thread_isolation.cpp",
  ]

  external_deps = [
    "hilog:libhilog",
  ]

  subsystem_name = "distributedhardware"
  part_name = "distributed_camera"
}