# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("//foundation/distributedhardware/distributed_camera/distributedcamera.gni")

# TCP适配器测试库
ohos_shared_library("dcamera_tcp_adapter_test") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
    boundary_sanitize = true
    integer_overflow = true
    ubsan = true
  }
  stack_protector_ret = true

  enable_note = false

  include_dirs = [
    "include",
    "../../../include",
    "../../../include/allconnect",
    "${common_path}/include/constants",
    "${common_path}/include/utils",
    "${feeding_smoother_path}/base",
    "${feeding_smoother_path}/derived",
    "${feeding_smoother_path}/utils",
    "${services_path}/cameraservice/base/include",
    "${services_path}/cameraservice/sinkservice/include/distributedcameramgr",
  ]

  sources = [
    "src/communication_adapter_factory.cpp",
    "src/local_tcp_adapter.cpp",
    "src/dcamera_tcp_adapter.cpp",
  ]

  ldflags = [
    "-fpie",
    "-Wl,-z,relro",
    "-Wl,-z,now",
  ]

  if (target_os == "win") {
    libs = [ "ws2_32" ]
  }

  deps = [
    "${common_path}:distributed_camera_utils",
    "//foundation/distributedhardware/distributed_camera/services/channel:distributed_camera_channel",
  ]

  defines = [
    "DCAMERA_TEST_ENABLE",
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"dcameratestadapter\"",
    "LOG_DOMAIN=0xD004150",
  ]

  if (distributed_camera_wakeup_enabled) {
    cflags = [ "-DDCAMERA_WAKEUP" ]
  }

  external_deps = [
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "cJSON:cjson",
    "c_utils:utils",
    "device_manager:devicemanagersdk",
    "distributed_hardware_fwk:distributed_av_receiver",
    "distributed_hardware_fwk:distributedhardwareutils",
    "distributed_hardware_fwk:libdhfwk_sdk",
    "dsoftbus:softbus_client",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "ipc:ipc_core",
    "ipc:ipc_single",
    "ffrt:libffrt",
  ]

  subsystem_name = "distributedhardware"
  part_name = "distributed_camera"
}

# TCP适配器单元测试
ohos_unittest("dcamera_tcp_adapter_unittest") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
    boundary_sanitize = true
    integer_overflow = true
    ubsan = true
  }
  stack_protector_ret = true

  enable_note = false

  module_install_path = ""

  include_dirs = [
    "include",
    "../unittest/common/channel",
    "../../../include",
    "../../../include/allconnect",
    "${common_path}/include/constants",
    "${common_path}/include/utils",
    "${feeding_smoother_path}/base",
    "${feeding_smoother_path}/derived",
    "${feeding_smoother_path}/utils",
    "${services_path}/cameraservice/base/include",
    "${services_path}/cameraservice/sinkservice/include/distributedcameramgr",
  ]

  sources = [
    "src/communication_adapter_factory.cpp",
    "src/local_tcp_adapter.cpp",
    "src/dcamera_tcp_adapter.cpp",
  ]

  deps = [
    "${common_path}:distributed_camera_utils",
    "//foundation/distributedhardware/distributed_camera/services/channel:distributed_camera_channel",
  ]

  defines = [
    "DCAMERA_TEST_ENABLE",
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"dcameratestadapter\"",
    "LOG_DOMAIN=0xD004150",
  ]

  external_deps = [
    "cJSON:cjson",
    "c_utils:utils",
    "distributed_hardware_fwk:distributedhardwareutils",
    "hilog:libhilog",
    "gtest:gtest",
    "gtest:gmock",
  ]

  subsystem_name = "distributedhardware"
  part_name = "distributed_camera"
}
